src/objects/Industry__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_ID__c</fullName>
        <displayFormat>INDS-{000000}</displayFormat>
        <externalId>true</externalId>
        <label>Reference ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Industries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Industry</label>
    <nameField>
        <label>Industry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Industries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>